--- a/abdominales-en-casa.html
+++ b/abdominales-en-casa.html
@@ -46,12 +46,12 @@
     <!-- End Facebook Pixel Code -->
 
     <meta name="verification" content="81bd71e1f26eb0b3898a5e427df1b4df" />
-    <meta name="description" content="Realiza abdominales en casa y consigue el abdomen que siempre deseaste. Inicia tu entrenamiento ahora mismo y saca las abdominales que llevas dentro! Videosesiones de clases virtuales impartidas por profesionales del deporte, que te indicará en todo momento cómo realizar correctamente los abdominales para lograr el éxito sin que te lesiones." />
+    <meta name="description" content="Realiza abdominales en casa y consigue el abdomen que siempre deseaste. Inicia tu entrenamiento ahora mismo y saca las abdominales que llevas dentro!" />
     <meta name="keywords" content="abdominales, abdominales en casa, abdomen, como sacar abdominales en casa, como hacer abdominales en casa, videos de abdominales" />
     <meta name”robots” content=”noindex,nofollow”>
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Abdominales en casa: Pon tu abdomen a prueba!" />
-    <meta property="og:description" content="Realiza abdominales en casa y consigue el abdomen que siempre deseaste. Inicia tu entrenamiento ahora mismo y saca las abdominales que llevas dentro! Videosesiones de clases virtuales impartidas por profesionales del deporte, que te indicará en todo momento cómo realizar correctamente los abdominales para lograr el éxito sin que te lesiones." />
+    <meta property="og:description" content="Realiza abdominales en casa y consigue el abdomen que siempre deseaste. Inicia tu entrenamiento ahora mismo y saca las abdominales que llevas dentro!" />
     <meta property="og:url" content="https://www.ictiva.com/abdominales-en-casa/" />
     <meta property="og:site_name" content="ictiva, tu gimnasio online" />
     <meta property="og:image" content="https://www.ictiva.com/img/logo_ictiva.svg" />
