--- a/ejercicios-yoga.html
+++ b/ejercicios-yoga.html
@@ -46,12 +46,12 @@
     <!-- End Facebook Pixel Code -->
 
     <meta name="verification" content="81bd71e1f26eb0b3898a5e427df1b4df" />
-    <meta name="description" content="Cuida tu cuerpo y mente con ictiva y sus ejercicios de yoga online. Sesiones virtuales a través de videos, impartidas por nuestra monitora Rosa Mª Madrid. PRUEBA GRATIS AHORA nuestras videosesiones virtuales y da el primer paso para llevar una vida saludable y plena. Empieza a cuidarte hoy mismo." />
+    <meta name="description" content="Cuida tu cuerpo y mente con ictiva y sus ejercicios de yoga online. Sesiones virtuales a través de videos. PRUEBA GRATIS AHORA y dale un cambio a tu vida." />
     <meta name="keywords" content="Ejercicios de yoga, Yoga ejercicios, Hacer yoga en casa, Yoga en casa, Yoga online, Ejercicios de yoga para principiantes, Cómo hacer yoga en casa, Ejercicios de yoga en casa, Ejercicios de yoga online" />
     <meta name”robots” content=”noindex,nofollow”>
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Yoga Online:Ejercicios de Yoga para ponerte en forma desde casa" />
-    <meta property="og:description" content="Cuida tu cuerpo y mente con ictiva y sus ejercicios de yoga online. Sesiones virtuales a través de videos, impartidas por nuestra monitora Rosa Mª Madrid. PRUEBA GRATIS AHORA nuestras videosesiones virtuales y da el primer paso para llevar una vida saludable y plena. Empieza a cuidarte hoy mismo." />
+    <meta property="og:description" content="Cuida tu cuerpo y mente con ictiva y sus ejercicios de yoga online. Sesiones virtuales a través de videos. PRUEBA GRATIS AHORA y dale un cambio a tu vida." />
     <meta property="og:url" content="https://www.ictiva.com/ejercicios-yoga" />
     <meta property="og:site_name" content="ictiva, tu gimnasio online" />
     <meta property="og:image" content="https://www.ictiva.com/img/logo_ictiva.svg" />
