--- a/entrenamiento-aerobico.html
+++ b/entrenamiento-aerobico.html
@@ -46,11 +46,11 @@
     <!-- End Facebook Pixel Code -->
 
     <meta name="verification" content="81bd71e1f26eb0b3898a5e427df1b4df" />
-    <meta name="description" content="Ahora con las rutinas de  entrenamiento aeróbico de ictiva, perder peso a la vez que tonificas tu cuerpo es posible gracias a nuestras videosesiones online. Regístrate ahora y prueba gratis nuestras sesiones virtuales." />
+    <meta name="description" content="Con las rutinas de  entrenamiento aeróbico de ictiva, perder peso a la vez que tonificas tu cuerpo es posible gracias a nuestras videosesiones online. PRUEBA GRATIS AHORA." />
     <meta name="keywords" content="entrenamiento aerobico, entreno aerobico, entrenamiento aerobico para quemar grasa, entrenamiento aerobico en casa, entrenos aerobicos, entrenamiento aerobico intenso, rutina de entrenamiento aerobico" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Entrenamiento aeróbico para ponerte en forma rápido" />
-    <meta property="og:description" content="Ahora con las rutinas de  entrenamiento aeróbico de ictiva, perder peso a la vez que tonificas tu cuerpo es posible gracias a nuestras videosesiones online. Regístrate ahora y prueba gratis nuestras sesiones virtuales." />
+    <meta property="og:description" content="Con las rutinas de  entrenamiento aeróbico de ictiva, perder peso a la vez que tonificas tu cuerpo es posible gracias a nuestras videosesiones online. PRUEBA GRATIS AHORA." />
     <meta property="og:url" content="https://www.ictiva.com/entrenamiento-aerobico/" />
     <meta property="og:site_name" content="ictiva, tu gimnasio online" />
     <meta property="og:image" content="https://www.ictiva.com/img/logo_ictiva.svg" />
