--- a/operacion-bikini.html
+++ b/operacion-bikini.html
@@ -8,7 +8,7 @@
     <meta name="robots" content="index, follow" />
     <meta name="language" content="es-ES" />
 
-    <title>Operación Bikini - Ejercicios en casa para la operación bikini - ictiva</title>
+    <title>Operación Bikini - Ejercicios en casa para la operación verano - ictiva</title>
 
     <!-- Google Optimize -->
     <style>.async-hide { opacity: 0 !important} </style>
@@ -49,7 +49,7 @@
     <meta name="description" content="Operación Bikini en casa: Videosesiones de Ejercicio + Plan Nutricional diario. ictiva, tu gimnasio online ha diseñado un plan específico de entrenamiento para esta Operación Bikini. A qué esperas a empezarlo?" />
     <meta name="keywords" content="operacion bikini, rutina entrenamiento, adelgazar, quemar calorias, quemar grasa, reducir abdomen, ejercicios cardiobasculares, ejercicios aerobicos, entreno" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="ictiva, tu gimnasio online" />
+    <meta property="og:title" content="Operación Bikini - Ejercicios en casa para la operación verano" />
     <meta property="og:description" content="Tu gimnasio online con 21 disciplinas donde escoger, más de 400 sesiones, disponibles 24h los 365 días al año,  evolución con gráficos y estadísticas, planes de entrenamiento, dietas de expertos nutricionistas, tarifas a tu medida" />
     <meta property="og:url" content="https://www.ictiva.com/operacion-bikini/" />
     <meta property="og:site_name" content="ictiva, tu gimnasio online" />
