--- a/ejercicios-pilates.html
+++ b/ejercicios-pilates.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="ictiva">
-    <meta name="robots" content="noindex, nofollow" />
+    <meta name="robots" content="index, follow" />
     <meta name="language" content="es-ES" />
 
     <title>Pilates en casa | Ejercicios de pilates para estar en forma</title>
@@ -46,12 +46,12 @@
     <!-- End Facebook Pixel Code -->
 
     <meta name="verification" content="81bd71e1f26eb0b3898a5e427df1b4df" />
-    <meta name="description" content="Cuida tu cuerpo  con ictiva y sus ejercicios de pilates en casa. Sesiones virtuales de Pilates para hacer online impartidas por nuestra monitora Cristina Arribas. PRUEBA GRATIS AHORA  y da el primer paso para llevar una vida saludable y plena." />
+    <meta name="description" content="Cuida tu cuerpo  con ictiva y sus ejercicios de pilates en casa. PRUEBA GRATIS AHORA nuestras sesiones virtuales de pilates para hacer online." />
     <meta name="keywords" content="pilates en casa, pilates online, ejercicios de pilates, ejercicios de pilates con pelota, ejercicios de pilates para principiantes, ejercicios de pilates basicos, pilates ejercicios" />
     <meta name”robots” content=”noindex,nofollow”>
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Pilates en casa - Ejercicios de pilates para estar en forma" />
-    <meta property="og:description" content="Cuida tu cuerpo  con ictiva y sus ejercicios de pilates en casa. Sesiones virtuales de Pilates para hacer online impartidas por nuestra monitora Cristina Arribas. PRUEBA GRATIS AHORA  y da el primer paso para llevar una vida saludable y plena." />
+    <meta property="og:description" content="Cuida tu cuerpo  con ictiva y sus ejercicios de pilates en casa. PRUEBA GRATIS AHORA nuestras sesiones virtuales de pilates para hacer online." />
     <meta property="og:url" content="https://www.ictiva.com/ejercicios-pilates" />
     <meta property="og:site_name" content="ictiva, tu gimnasio online" />
     <meta property="og:image" content="https://www.ictiva.com/img/logo_ictiva.svg" />
