--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="robots" content="index, follow" />
     <meta name="language" content="es-ES" />
 
-    <title>Tu Gimnasio en casa. Haz ejercicios en casa online con nuestros vídeos. Con nuestro gimnasio virtual podrás hacer gimnasia en casa cómodamente. - ictiva</title>
+    <title>Gimnasio en casa: Haz ejercicios en casa con tu gimnasio online virtual - ictiva</title>
 
     <!-- Google Optimize -->
     <style>.async-hide { opacity: 0 !important} </style>
@@ -46,11 +46,11 @@
     <!-- End Facebook Pixel Code -->
 
     <meta name="verification" content="81bd71e1f26eb0b3898a5e427df1b4df" />
-    <meta name="description" content="Tu gimnasio online con rutinas de ejercicios para hacer en casa. Clases y videos disponibles 24h los 365 días al año. Planes de entrenamiento y dietas a medida." />
-    <meta name="keywords" content="gimnasio online, ejercicios en casa, gimnasio en casa, gimnasia en casa, plan de entrenamiento, entrenamiento en casa, rutina de ejercicios, aeróbicos en casa, fitness en casa, abdominales en casa." />
+    <meta name="description" content="Tu gimnasio online con rutinas de ejercicios en casa, planes de entrenamiento y dietas. Inicia tu entrenamiento virtual con nuestro gimnasio en casa." />
+    <meta name="keywords" content="gimnasio online, ejercicios en casa, gimnasio en casa, gimnasia en casa, plan de entrenamiento, rutina de ejercicios, gym virtual, gimnasio virtual" />
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="ictiva, tu gimnasio online" />
-    <meta property="og:description" content="Tu gimnasio online con rutinas de ejercicios para hacer en casa. Clases y videos disponibles 24h los 365 días al año. Planes de entrenamiento y dietas a medida." />
+    <meta property="og:title" content="Gimnasio en casa: Haz ejercicios en casa con tu gimnasio online virtual" />
+    <meta property="og:description" content="Tu gimnasio online con rutinas de ejercicios en casa, planes de entrenamiento y dietas. Inicia tu entrenamiento virtual con nuestro gimnasio en casa." />
     <meta property="og:url" content="https://www.ictiva.com/" />
     <meta property="og:site_name" content="ictiva, tu gimnasio online" />
     <meta property="og:image" content="https://www.ictiva.com/img/logo_ictiva.svg" />
@@ -191,8 +191,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <!-- <p class="text-uppercase text-white h4 font-weight-bold p-3 mt-5 mb-3" style="background-color: rgba(229,117,50,.8);">Hasta el 31 de Agosto</p> -->
                 <!-- <p class="text-uppercase text-white h4 pt-3 pb-4 mb-5" style="background-color: rgba(0,0,0,.4);"><strong class="h1 text-primary">30% Dto - Código: <span class="font-weight-bold">VERANO18</span></strong></p> -->
                 <h1 class="display-1 text-white text-uppercase text-shadow">Gimnasio Online</h1>
-                <h4 class="py-1 py-sm-3 py-lg-4 text-white" style="font-size: 2rem;">#ConquistaTuCuerpo</h4>
-                <h3 class="py-1 py-sm-3 py-lg-3 text-primary display-4">¡Somos más de 200.000!</h3>
+                <p class="py-1 py-sm-3 py-lg-4 text-white" style="font-size: 2rem;">Fitness, Aeróbic, Pilates, Yoga, Hiit</p>
+                <h2 class="py-1 py-sm-3 py-lg-3 text-primary font-weight-bold">Más de 1.000 vídeos de ejercicios en casa</h2>
                 <div class="hidden-xs-down">
                     <p class="my-5"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?home=gimnasio">Inicia tu Entrenamiento</a></p>
                 </div>
@@ -211,84 +211,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             Your browser does not support HTML5 video.
         </video>
     </header>
-    <!-- 
-    <section class="no-padding">
-        <div class="container-fluid">
-            <div class="row py-5">
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="mt-3">
-                        <img src="homes/img/iconos/tiempo.png" class="sr-icons mb-3" alt="reloj" height="80px" width="auto">
-                        <h4 class="h3">24 HORAS/ 365 DÍAS</h3>
-                        <p class="text-muted">Acceso ilimitado donde quieras y a la hora que quieras.</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div>
-                        <img src="homes/img/iconos/ejercicio.png" class="sr-icons mb-2" alt="abdominales" height="100px" width="auto">
-                        <h4 class="h3">+800 CLASES</h3>
-                        <p class="text-muted">Clases dirigidas con ejercicios de 21 disciplinas diferentes.</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="mt-3">
-                        <img src="homes/img/iconos/niveles.png" class="sr-icons mb-3" alt="companero" height="80px" width="auto">
-                        <h4 class="h3">TU PONES EL LÍMITE</h3>
-                        <p class="text-muted">5 niveles de dificultad para adaptarse a tu forma física.</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="mt-3">
-                        <img src="homes/img/iconos/copa.png" class="sr-icons mb-3" alt="sonrisa" height="80px" width="auto">
-                        <h4 class="h3">MOTIVATOR SYSTEM</h3>
-                        <p class="text-muted">Haz los ejercicios y suma puntos, sube en la clasificación y gana premios.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="no-padding" id="top-section">
-        <div class="container-fluid">
-            <div class="row no-padding">
-                <div class="col-md-6 no-padding text-center block">                    
-                    <figure class="cl-box">
-                        <img class="img-fluid" src="homes/img/fotos/perdida-de-peso.jpg" height="auto" width="100%" alt="">                            
-                        <figcaption class="cl-content">
-                            <h2 class="px-1 px-sm-5 mx-0 mx-sm-5 text-white display-4 text-uppercase">Pérdida de peso y mejora del cardio</h2>
-                            <div class="hidden-sm-down">
-                                <p class="lead mt-5 text-bigger"><a href="https://www.ictiva.com/ejercicios-en-casa/videos-aerobic/">Aeróbic</a></p>
-                                <p class="lead text-bigger"><a href="https://www.ictiva.com/ejercicios-en-casa/videos-total-body-conditioning-tbc/">TBC</a></p>
-                                <p class="lead text-bigger"><a href="https://www.ictiva.com/ejercicios-en-casa/videos-steps/">Steps</a></p>
-                                <p class="lead text-bigger"><a href="https://www.ictiva.com/ejercicios-en-casa/combat/">Combat</a></p>
-                                <p class="lead text-bigger"><a href="https://www.ictiva.com/ejercicios-en-casa/videos-boxeo/">Boxeo</a></p>
-                                <p class="py-5">
-                                    <a class="btn btn-cta btn-primary btn-xl" href="https://www.ictiva.com/tarifas/?home=gimnasio">Inicia tu Entrenamiento</a>
-                                </p>
-                            </div>
-                        </figcaption>
-                    </figure>
-                </div>
-                <div class="col-md-6 no-padding text-center block">                    
-                    <figure class="cl-box">
-                        <img class="img-fluid" src="homes/img/fotos/tonificar.jpg" height="auto" width="100%" alt="">                            
-                        <figcaption class="cl-content">
-                            <h2 class="px-1 px-sm-5 mx-0 mx-sm-5 text-white display-4 text-uppercase">Muscular, Tonificar y Definir</h2>
-                            <div class="hidden-sm-down">
-                                <p class="lead mt-5 text-bigger"><a href="https://www.ictiva.com/ejercicios-en-casa/videos-fitness/">Fitness</a></p>
-                                <p class="lead text-bigger"><a href="https://www.ictiva.com/ejercicios-en-casa/cuerpos-perfectos/">Cuerpo Perfecto</a></p>
-                                <p class="lead text-bigger"><a href="https://www.ictiva.com/ejercicios-en-casa/hiit/">Hiit</a></p>
-                                <p class="lead text-bigger"><a href="https://www.ictiva.com/ejercicios-de-crossfit/">CrossFitness</a></p>
-                                <p class="lead text-bigger"><a href="https://www.ictiva.com/ejercicios-en-casa/videos-abdominales/">Abdominales</a></p>
-                                <p class="py-5">
-                                    <a class="btn btn-cta btn-primary btn-xl" href="https://www.ictiva.com/tarifas/?home=gimnasio">Inicia tu Entrenamiento</a>
-                                </p>
-                            </div>
-                        </figcaption>
-                    </figure>
-                </div>
-            </div>
-        </div>
-    </section>
- -->
     
 
     <section id="id-gym" class="no-padding">
@@ -334,7 +256,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid bg-lightgrey2">
             <div class="row py-5">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading display-4">SERVICIOS</h2>
+                    <h2 class="section-heading display-4">SERVICIOS GIMNASIO EN CASA</h2>
                     <h4>Todos los servicios de nuestro gimnasio virtual a un mismo precio. <strong>¡Ponte en forma!</strong></h4>
                 </div>
             </div>
@@ -474,7 +396,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div id="id-app" class="container-fluid bg-lightgrey2">
             <div class="row py-5">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading display-4">APP</h2>
+                    <h2 class="section-heading display-4">APP GYM VIRTUAL</h2>
                     <h4>Entrenamiento y dietas donde tu quieras</h4>
                 </div>
             </div>
@@ -581,15 +503,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </ul>
                 </div>
             </div>
-
-            
         </div>
     </section>
     <section class="no-padding footer-list bg-footer2">
         <div class="container-fluid px-5 pt-5 pb-0">
             <div class="row">
                 <div class="col-12 col-lg-7 px-0 pt-0 pb-5">
-                    <h5 class="text-uppercase font-weight-bold font-weight-bold">Salas de ejercicio</h5>
+                    <h5 class="text-uppercase font-weight-bold font-weight-bold">Salas de ejercicios en casa</h5>
                     <hr style="border-color:#333333;">
                     <div class="container-fluid pl-0 pr-5">
                         <div class="row">
