--- a/ejercicios-hipopresivos.html
+++ b/ejercicios-hipopresivos.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="ictiva">
-    <meta name="robots" content="noindex, nofollow" />
+    <meta name="robots" content="index, follow" />
     <meta name="language" content="es-ES" />
 
     <title>Abdominales hipopresivos: Aprende a realizar hipopresivos en casa | ictiva</title>
@@ -52,11 +52,11 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Abdominales hipopresivos: Aprende a realizar hipopresivos en casa" />
     <meta property="og:description" content="Sesiones de  abdominales hipopresivos para reducir la cintura y reforzar el suelo pélvico, así como otros beneficios. Descubre cómo se realizan con ictiva desde casa" />
-    <meta property="og:url" content="https://www.ictiva.com/tabla-abdominales/" />
+    <meta property="og:url" content="https://www.ictiva.com/ejercicios-hipopresivos/" />
     <meta property="og:site_name" content="ictiva, tu gimnasio online" />
     <meta property="og:image" content="https://www.ictiva.com/img/logo_ictiva.svg" />
 
-    <link rel=”canonical” href=”https://www.ictiva.com/tabla-abdominales/" />
+    <link rel=”canonical” href=”https://www.ictiva.com/ejercicios-hipopresivos/" />
 
     <!--Icon, favicon & webapp -->
     <link rel="shortcut icon" href="homes/img/favicon.ico" type="image/vnd.microsoft.icon" />
