--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <!-- <p class="text-uppercase text-white h4 font-weight-bold p-3 mt-5 mb-3" style="background-color: rgba(229,117,50,.8);">Hasta el 31 de Agosto</p> -->
                 <!-- <p class="text-uppercase text-white h4 pt-3 pb-4 mb-5" style="background-color: rgba(0,0,0,.4);"><strong class="h1 text-primary">30% Dto - Código: <span class="font-weight-bold">VERANO18</span></strong></p> -->
                 <h1 class="display-1 text-white text-uppercase text-shadow">Gimnasio Online</h1>
-                <p class="py-1 py-sm-3 py-lg-4 text-white" style="font-size: 2rem;">Fitness, Aeróbic, Pilates, Yoga, Hiit</p>
-                <h2 class="py-1 py-sm-3 py-lg-3 text-primary font-weight-bold">Más de 1.000 vídeos de ejercicios en casa</h2>
+                <p class="py-1 py-sm-3 py-lg-4 text-white" style="font-size: 2rem;">#ConquistaTuCuerpo</p>
+                <h2 class="py-1 py-sm-3 py-lg-3 text-primary font-weight-bold">¡Somos más de 250.000 haciendo ejercicios en casa!</h2>
                 <div class="hidden-xs-down">
                     <p class="my-5"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?home=gimnasio">Inicia tu Entrenamiento</a></p>
                 </div>
