--- a/ejercicios-fitness.html
+++ b/ejercicios-fitness.html
@@ -47,7 +47,7 @@
 
     <meta name="verification" content="81bd71e1f26eb0b3898a5e427df1b4df" />
     <meta name="description" content="Ponte en forma con nuestras videosesiones virtuales para hacer fitness en casa. Entra ahora en ictiva y sorpréndete de lo fácil que es!" />
-    <meta name="keywords" content="gym virtual, gimnasio virtual, virtual gym, virtuagym, ejercicios gym virtual, videos gym virtual, gymvirtual cardio, gymvirtual gluteos, gymvirtual principiantes, gymvirtual brazos" />
+    <meta name="keywords" content="fitness, ejercicios fitness, fitness en casa, fitness online, clases de fitness, vídeos de fitness, gym fitness, ejercicios fitness para principiantes" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Fitness en casa: Consigue unos resultados increíbles" />
     <meta property="og:description" content="Ponte en forma con nuestras videosesiones virtuales para hacer fitness en casa. Entra ahora en ictiva y sorpréndete de lo fácil que es!" />
