--- a/fitness-online.html
+++ b/fitness-online.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="ictiva">
-    <meta name="robots" content="index, follow" />
+    <meta name="robots" content="noindex, nofollow" />
     <meta name="language" content="es-ES" />
 
     <title>Fitness online para realizar ejercicios en casa. Entrena con nuestras rutinas de vídeos fitness para hombre y mujeres - ictiva</title>
@@ -94,25 +94,25 @@
 
     <div id="menu-wrap" class="container-fluid bg-white fixed-top">
         <div class="row my-2">
-            <nav class="navbar navbar-toggleable-md navbar-light col-4 col-lg-3 bg-white">
+            <nav class="navbar navbar-toggleable-md navbar-light col-4 col-lg-4 bg-white">
                 <div class="container pl-lg-0">
                     <a class="navbar-brand" href="#page-top">
                         <img src="https://www.ictiva.com/img/logo_ictiva.svg" width="auto" height="auto" alt="ictiva-logo" class="img-fluid">
                     </a>
                 </div>
             </nav>
-            <div class="col-lg-6 no-padding bg-white hidden-md-down pt-2">                
+            <div class="col-lg-4 no-padding bg-white hidden-md-down pt-2">
                 <div class="w-100 text-center">
                     <p class="h1 mb-0">Tu Gimnasio Online</p>
                 </div>
             </div>
-            <div class="col-8 col-lg-3 no-padding bg-white">
+            <div class="col-8 col-lg-4 no-padding bg-white">
                 <ul class="row justify-content-end mt-3 mt-sm-1 mb-0 mr-1 mr-md-2 p-0 h-100 align-items-start menu-mob">
                     <li class="bg-grey p-0 py-sm-2 p-xl-2">
                         <a class="text-dark btn btn-double text-uppercase" href="https://www.ictiva.com/tarifas/?home=gimnasio">TARIFAS</a>
                     </li>
                     <li class="bg-primary p-0 py-sm-2 p-xl-2">
-                        <a class="text-white btn btn-double text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">PRUEBA GRATIS</a>
+                        <a class="text-white btn btn-double text-uppercase" href="https://www.ictiva.com/tarifas/?home=gimnasio">Inicia tu Entrenamiento</a>
                     </li>
                 </ul>
             </div>
@@ -131,7 +131,7 @@
                 <div class="navbar navbar-dark hidden-sm-up" data-toggle="sticky-onscroll">
                   <div class="container no-padding mt-5">
                     <div class="navbar-header">
-                      <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?utm_source=fitness-online&utm_medium=adwords-landing&utm_campaign=fitness">PRUEBA GRATIS</a></p>
+                      <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?utm_source=fitness-online&utm_medium=adwords-landing&utm_campaign=fitness">Inicia tu Entrenamiento</a></p>
                     </div>
                   </div>
                 </div>
@@ -192,7 +192,7 @@
                                 <p class="lead text-bigger">Avanzado</p>
                                 <p class="lead text-bigger">Pro</p>
                                 <p class="py-5">
-                                    <a class="btn btn-cta btn-primary btn-xl" href="https://www.ictiva.com/usuarios/alta/?utm_source=fitness-online&utm_medium=adwords-landing&utm_campaign=fitness">PRUEBA GRATIS</a>
+                                    <a class="btn btn-cta btn-primary btn-xl" href="https://www.ictiva.com/tarifas/?utm_source=fitness-online&utm_medium=adwords-landing&utm_campaign=fitness">ABÓNATE DESDE 5,95€/MES</a>
                                 </p>
                             </div>
                         </figcaption>
@@ -209,7 +209,7 @@
                                 <p class="lead text-bigger">Tonificar tu cuerpo</p>
                                 <p class="lead text-bigger">Ganar masa muscular</p>
                                 <p class="py-5">
-                                    <a class="btn btn-cta btn-primary btn-xl" href="https://www.ictiva.com/usuarios/alta/?utm_source=fitness-online&utm_medium=adwords-landing&utm_campaign=fitness">PRUEBA GRATIS</a>
+                                    <a class="btn btn-cta btn-primary btn-xl" href="https://www.ictiva.com/tarifas/?utm_source=fitness-online&utm_medium=adwords-landing&utm_campaign=fitness">ABÓNATE DESDE 5,95€/MES</a>
                                 </p>
                             </div>
                         </figcaption>
@@ -225,7 +225,7 @@
               <h3 class="display-3 py-4 text-uppercase">Entrena con nuestros videos de Fitness</h3>
               <p class="lead py-2 text-bigger">La herramienta perfecta para ponerte en forma en casa que te premia por mantenerte activo!</p>
               <p class="py-5">
-                    <a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?utm_source=fitness-online&utm_medium=adwords-landing&utm_campaign=fitness">PRUEBA GRATIS</a>
+                    <a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?utm_source=fitness-online&utm_medium=adwords-landing&utm_campaign=fitness">ABÓNATE DESDE 5,95€/MES</a>
                 </p>
             </div>
         </div>
