--- a/ejercicios-para-adelgazar-tarifas.html
+++ b/ejercicios-para-adelgazar-tarifas.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="ictiva">
-    <meta name="robots" content="index, follow" />
+    <meta name="robots" content="noindex, nofollow" />
     <meta name="language" content="es-ES" />
 
     <title>Ejercicios para adelgazar desde casa. Entrena con nuestros vídeos de rutinas de ejercicios para perder peso y quemar grasa.</title>
