--- a/pilates-online-tarifas.html
+++ b/pilates-online-tarifas.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="ictiva">
-    <meta name="robots" content="index, follow" />
+    <meta name="robots" content="noindex, nofollow" />
     <meta name="language" content="es-ES" />
 
     <title>Pilates Online para realizar ejercicios en casa. Entrena con nuestras rutina de videos pilates para hombres y mujeres - ictiva</title>
@@ -115,7 +115,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </a>
                 </div>
             </nav>
-            <div class="col-lg-4 no-padding bg-white hidden-md-down pt-2">                
+            <div class="col-lg-4 no-padding bg-white hidden-md-down pt-2">
                 <div class="w-100 text-center">
                     <p class="h1 mb-0">Tu Gimnasio Online</p>
                 </div>
