--- a/ejercicios-yoga.html
+++ b/ejercicios-yoga.html
@@ -48,7 +48,6 @@
     <meta name="verification" content="81bd71e1f26eb0b3898a5e427df1b4df" />
     <meta name="description" content="Cuida tu cuerpo y mente con ictiva y sus ejercicios de yoga online. Sesiones virtuales a través de videos. PRUEBA GRATIS AHORA y dale un cambio a tu vida." />
     <meta name="keywords" content="Ejercicios de yoga, Yoga ejercicios, Hacer yoga en casa, Yoga en casa, Yoga online, Ejercicios de yoga para principiantes, Cómo hacer yoga en casa, Ejercicios de yoga en casa, Ejercicios de yoga online" />
-    <meta name”robots” content=”noindex,nofollow”>
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Yoga Online:Ejercicios de Yoga para ponerte en forma desde casa" />
     <meta property="og:description" content="Cuida tu cuerpo y mente con ictiva y sus ejercicios de yoga online. Sesiones virtuales a través de videos. PRUEBA GRATIS AHORA y dale un cambio a tu vida." />
@@ -255,10 +254,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="col-4 no-padding bg-white">
                 <ul class="row justify-content-end mt-3 mt-sm-1 mb-0 mr-1 mr-md-2 p-0 h-100 align-items-start menu-mob">
                     <li class="bg-grey-2 px-4 py-0 py-sm-2 p-xl-2">
-                        <a class="text-dark btn text-uppercase" href="https://www.ictiva.com/tarifas/?home=gimnasio">TARIFAS</a>
+                        <a class="text-dark btn text-uppercase" href="https://www.ictiva.com/tarifas/?home=salud">TARIFAS</a>
                     </li>
                     <li class="bg-primary p-0 py-sm-2 p-xl-2 hidden-md-down">
-                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">PRUEBA GRATIS</a>
+                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=salud">PRUEBA GRATIS</a>
                     </li>
                     <!-- <li class="bg-darkgrey p-0 py-sm-2 p-xl-2">
                         <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/login/">Acceso Usuarios</a>
