--- a/ejercicios-gap.html
+++ b/ejercicios-gap.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="ictiva">
-    <meta name="robots" content="noindex, nofollow" />
+    <meta name="robots" content="index, follow" />
     <meta name="language" content="es-ES" />
 
-    <title>El ejercicio perfecto para hacer desde casa</title>
+    <title>Ejercicios GAP - El ejercicio perfecto para hacer desde casa</title>
 
     <!-- Google Optimize -->
     <style>.async-hide { opacity: 0 !important} </style>
@@ -49,7 +49,7 @@
     <meta name="description" content="Gracias a estos ejercicios GAP tendrás los glúteos, abdominales y piernas tonificados y fuertes desde casa. ¡Entra y empieza hoy tu entrenamiento!" />
     <meta name="keywords" content="ejercicios gap, gap deporte, rutina gap, gap entrenamiento, clases de gap, clases de gap en casa, gap en casa, gap gimnasio" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="El ejercicio perfecto para hacer desde casa" />
+    <meta property="og:title" content="Ejercicios GAP - El ejercicio perfecto para hacer desde casa" />
     <meta property="og:description" content="Gracias a estos ejercicios GAP tendrás los glúteos, abdominales y piernas tonificados y fuertes desde casa. ¡Entra y empieza hoy tu entrenamiento!" />
     <meta property="og:url" content="https://www.ictiva.com/ejercicios-gap/" />
     <meta property="og:site_name" content="ictiva, tu gimnasio online" />
