--- a/sentadillas.html
+++ b/sentadillas.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="ictiva">
-    <meta name="robots" content="noindex, nofollow" />
+    <meta name="robots" content="index, follow" />
     <meta name="language" content="es-ES" />
 
-    <title>El ejercicio perfecto para hacer desde casa</title>
+    <title>Sentadillas - El ejercicio perfecto para hacer desde casa</title>
 
     <!-- Google Optimize -->
     <style>.async-hide { opacity: 0 !important} </style>
@@ -49,7 +49,7 @@
     <meta name="description" content="Las sentadillas refuerzan la musculatura del tren inferior, aportan flexibilidad y mejoran el equilibrio. ¡Entra con nuestras sesiones y empieza hoy a estilizar tu figura!" />
     <meta name="keywords" content="sentadillas, sentadilla, como hacer sentadillas, sentadillas en casa, ejercicios sentadillas, sentadilla profunda, sentadillas con barra, sentadillas con peso" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="El ejercicio perfecto para hacer desde casa" />
+    <meta property="og:title" content="Sentadillas - El ejercicio perfecto para hacer desde casa" />
     <meta property="og:description" content="Las sentadillas refuerzan la musculatura del tren inferior, aportan flexibilidad y mejoran el equilibrio. ¡Entra con nuestras sesiones y empieza hoy a estilizar tu figura!" />
     <meta property="og:url" content="https://www.ictiva.com/sentadillas/" />
     <meta property="og:site_name" content="ictiva, tu gimnasio online" />
