--- a/entrenamiento-en-casa.html
+++ b/entrenamiento-en-casa.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="ictiva">
-    <meta name="robots" content="noindex, nofollow" />
+    <meta name="robots" content="index, follow" />
     <meta name="language" content="es-ES" />
 
     <title>Empieza las sesiones de entrenamiento en casa con los vídeos de ictiva</title>
