--- a/fitness-online-tarifas.html
+++ b/fitness-online-tarifas.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="ictiva">
-    <meta name="robots" content="index, follow" />
+    <meta name="robots" content="noindex, nofollow" />
     <meta name="language" content="es-ES" />
 
     <title>Fitness online para realizar ejercicios en casa. Entrena con nuestras rutinas de vídeos fitness para hombre y mujeres - ictiva</title>
