--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <a class="text-dark btn text-uppercase" href="https://www.ictiva.com/tarifas/?home=gimnasio">TARIFAS</a>
                     </li>
                     <li class="bg-primary p-0 py-sm-2 p-xl-2 hidden-md-down">
-                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">PRUEBA GRATIS</a>
+                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/tarifas/?home=gimnasio">INICIA TU ENTRENAMIENTO</a>
                     </li>
                     <li class="bg-darkgrey p-0 py-sm-2 p-xl-2">
                         <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/login/">Acceso Usuarios</a>
@@ -188,18 +188,18 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <header class="bg-gym d-flex align-items-center section-header-video">
         <div class="row align-items-center h-100 m-0 w-100 bg-video">
             <div class="col text-center no-padding promo">
-                <!-- <p class="text-uppercase text-white h4 font-weight-bold p-3 mt-5 mb-3" style="background-color: rgba(229,117,50,.8);">Hasta el 31 de Agosto</p> -->
-                <!-- <p class="text-uppercase text-white h4 pt-3 pb-4 mb-5" style="background-color: rgba(0,0,0,.4);"><strong class="h1 text-primary">30% Dto - Código: <span class="font-weight-bold">VERANO18</span></strong></p> -->
-                <h1 class="display-1 text-white text-uppercase text-shadow">Gimnasio Online</h1>
-                <p class="py-1 py-sm-3 py-lg-4 text-white" style="font-size: 2rem;">25 disciplinas diferentes. Descúbrelas!</p>
+                <p class="text-uppercase text-white h4 font-weight-bold p-3 mb-4 mt-2" style="background-color: rgba(229,117,50,.8);">Especial BlackFriday - 30% dto - Código: BF30</p>
+                <!--<p class="text-uppercase text-white h4 pt-3 pb-4 mb-5" style="background-color: rgba(0,0,0,.4);"><strong class="h1 text-primary">30% Dto en todas las tarifas - Código: <span class="font-weight-bold">BF30</span></strong></p>-->
+                <h1 class="display-1 text-white text-uppercase text-shadow pt-5">Gimnasio Online</h1>
+                <!--<p class="py-1 py-sm-3 py-lg-4 text-white" style="font-size: 2rem;">25 disciplinas diferentes. Descúbrelas!</p>-->
                 <h2 class="py-1 py-sm-3 py-lg-3 text-primary font-weight-bold">¡Más de 1.000 videosesiones de ejercicios en casa!</h2>
                 <div class="hidden-xs-down">
-                    <p class="my-5"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">Prueba Gratis Ahora</a></p>
+                    <p class="my-5"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?home=gimnasio">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
                 <div class="navbar navbar-dark hidden-sm-up" data-toggle="sticky-onscroll">
                   <div class="container no-padding">
                     <div class="navbar-header">
-                      <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">Prueba Gratis Ahora</a></p>
+                      <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?home=gimnasio">INICIA TU ENTRENAMIENTO</a></p>
                     </div>
                   </div>
                 </div>
