--- a/abdominales-en-casa.html
+++ b/abdominales-en-casa.html
@@ -249,7 +249,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <a class="nav-link text-blue" href="http://www.ictivashop.com/">Shop</a>
                             </li>
                             <li class="nav-item px-2 text-uppercase hidden-lg-up">
-                                <a class="nav-link text-primary" href="https://www.ictiva.com/tarifas/">Tarifas</a>
+                                <a class="nav-link text-primary" href="https://www.ictiva.com/tarifas/?home=gimnasio">Tarifas</a>
                             </li>
                         </ul>
                     </div>
@@ -257,11 +257,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </nav>
             <div class="col-5 no-padding bg-white">
                 <ul class="row justify-content-end mt-3 mt-sm-1 mb-0 mr-1 mr-md-2 p-0 h-100 align-items-start menu-mob">
-                    <li class="bg-grey-2 py-0 px-4 py-sm-2 p-xl-2">
-                        <a class="text-dark btn text-uppercase" href="https://www.ictiva.com/tarifas/">TARIFAS</a>
+                    <li class="bg-grey-2 py-0 px-2 py-sm-2 p-xl-2">
+                        <a class="text-dark btn" href="https://www.ictiva.com/tarifas/?home=gimnasio">BLACKFRIDAY <span class="text-primary font-weight-bold pl-1">30% Dto</span></a>
                     </li>
                     <li class="bg-primary p-0 py-sm-2 p-xl-2 hidden-md-down">
-                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/tarifas/">INICIA TU ENTRENAMIENTO</a>
+                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/tarifas/?home=gimnasio">INICIA TU ENTRENAMIENTO</a>
                     </li><!-- 
                     <li class="bg-darkgrey p-0 py-sm-2 p-xl-2 hidden-md-down">
                         <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/login/">Acceso Usuarios</a>
