--- a/fitness-online-tarifas.html
+++ b/fitness-online-tarifas.html
@@ -122,7 +122,7 @@
     <header class="bg-gym d-flex align-items-center section-header-video">
         <div class="row align-items-center h-100 m-0 w-100 bg-video">
             <div class="col text-center no-padding promo">
-                <p class="text-uppercase text-white h4 pt-3 pb-4 mb-5" style="background-color: rgba(0,0,0,.4);"><strong class="h1 text-primary">Código 20% dto.: <span class="font-weight-bold">FIT20</span></strong><br>Últimos días</p>
+                <p class="text-uppercase text-white h4 pt-3 pb-4 mb-5" style="background-color: rgba(0,0,0,.4);">ESPECIAL BLACKFRIDAY<br><strong class="h1 text-primary">Código 30% dto.: <span class="font-weight-bold">BF30</span></strong></p>
                 <h1 class="display-1 text-white text-uppercase text-shadow">Fitness Online</h1>
                 <h2 class="text-white font-weight-bold py-5 px-2 hidden-xs-down">Tus ejercicios de Fitness en casa</h2>
                 <div class="hidden-xs-down">
