--- a/hiit-en-casa.html
+++ b/hiit-en-casa.html
@@ -119,7 +119,8 @@
     </div>
     <header class="bg-gym d-flex align-items-center section-header-video">
         <div class="row align-items-center h-100 m-0 w-100 bg-video">
-            <div class="col text-center no-padding">
+            <div class="col text-center no-padding promo">
+                    <p class="text-uppercase text-white h4 pt-3 pb-4 mb-5" style="background-color: rgba(0,0,0,.4);">ESPECIAL BLACKFRIDAY<br><strong class="h1 text-primary">Código 30% dto.: <span class="font-weight-bold">BF30</span></strong></p>
                 <h1 class="display-1 text-white text-uppercase text-shadow">HIIT en Casa</h1>
                 <h2 class="text-white font-weight-bold py-5 px-2">Tus ejercicios HIIT en casa</h2>
 
