--- a/ejercicios-yoga.html
+++ b/ejercicios-yoga.html
@@ -379,9 +379,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div><img src="homes/img/img-landing/yoga-7.jpg" class="img-fluid" alt=""></div>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
-                    <h2 class="mb-5 pt-2 text-center text-md-left text-primary">CLASES DE YOGA ONLINE</h2>
+                    <h2 class="mb-5 pt-2 text-center text-md-left text-primary"><a href="https://www.ictiva.com/clases-yoga/" target="_blank" class="text-primary">CLASES DE YOGA</a> ONLINE</h2>
                     <ul class="pl-0">
-                        <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>En ictiva podrás iniciarte  paso a paso, desde la base de la disciplina con los asanas para principiantes. Hacer nuestras <a href="https://www.ictiva.com/clases-yoga/" target="_blank" class="text-primary">clases de yoga</a> te resultará sencillo, recibiendo las instrucciones al detalle para realizar las posturas, aunque desconozcas por completo esta disciplina milenaria.</li>
+                        <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>En ictiva podrás iniciarte  paso a paso, desde la base de la disciplina con los asanas para principiantes. Hacer nuestras clases de yoga te resultará sencillo, recibiendo las instrucciones al detalle para realizar las posturas, aunque desconozcas por completo esta disciplina milenaria.</li>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Con las clases de ictiva, selecciona el nivel desde el cual partir y la profesora te guiará, a través de sus explicaciones, para realizar correctamente las diferentes asanas. Gracias a la calidad de la filmación, te será muy sencillo seguir sus movimientos. Si es la primera vez que practicas esta disciplina comprobarás que todo está filmado para que no pierdas detalle y consigas realizar con éxito los ejercicios de Yoga para principiantes.</li>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Una clase se organiza en varias fases: calentamiento, tonificación, estiramientos y relajación. Con el calentamiento prepararás el cuerpo y la mente. En el siguiente paso, tonificarás gradualmente los músculos, logrando firmeza y corrigiendo la postura. Con los estiramientos eliminarás tensiones y, por último, liberarás toxinas con la relajación.</li>
                     </ul>
@@ -397,7 +397,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div><img src="homes/img/img-landing/yoga-6.jpg" class="img-fluid" alt=""></div>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
-                    <h2 class="mb-5 pt-2 text-center text-md-left text-primary">EJERCICIOS DE YOGA EN CASA</h2>
+                    <h2 class="mb-5 pt-2 text-center text-md-left text-primary"><a href="https://www.ictiva.com/posturas-de-yoga/" target="_blank" class="text-primary">POSTURAS DE YOGA</a> PARA HACER EN CASA</h2>
                     <p class="mb-3 ls text-medium">Los ejercicios  constan de clases enfocadas a diferentes posturas (Hatha y Kundalini). Si decides instruirte desde el inicio, podrás probar dos sesiones gratuitas de ejercicios de Yoga para principiantes. Regístrate en el formulario y accede a  las clases online. Además, tendrás más de 25 sesiones de diversas disciplinas para que compruebes cómo es el gimnasio online de ictiva.</p>
                     <p class="mb-3 ls text-medium">Para hacer Yoga en casa sólo tendrás que escoger un rincón de tu hogar, conectar el dispositivo que prefieras  y empezar la práctica a partir de sesiones que te ayudarán a introducirte en esta especialidad que beneficiará tu inteligencia emocional.</p>
                     <p class="mb-3 ls text-medium">Con ictiva irás conociendo poco a poco todas las claves, desde la respiración hasta los movimientos, pasando por las correctas posiciones y la importancia de la alineación corporal. No lo dudes! Empieza a practicar todas las asanas hoy mismo y verás como tu cuerpo y tu mente te lo agradecen.</p>
@@ -414,7 +414,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
-                    <h2 class="mb-5 pt-2 text-center text-md-left text-primary">LA APP DE ICTIVA</h2>
+                    <h2 class="mb-5 pt-2 text-center text-md-left text-primary">LA APP DE EJERCICIOS DE YOGA DE ICTIVA</h2>
                     <p class="mb-3 ls text-medium">¿Sabías que puedes llevarte el gimnasio en el bolsillo dónde y cuándo tu quieras? Gracias a la app de ictiva podrás realizar Yoga online desde el lugar que más te inspire.</p>
                     <p class="mb-3 ls text-medium">Ningún rincón se te resistirá a la hora de practicar tus asanas. Puedes escoger el que más te guste o el que mejor se adapte a tus circunstancias. Tanto si estás de viaje o en tu domicilio, como si te gusta practicar esta disciplina al aire libre en lugar inspirador, llévate la aplicación en el bolsillo y empieza a beneficiarte de este método.</p>
                     <p class="mb-3 ls text-medium">Ya puedes disfrutar de  la aplicación para hacer Yoga en casa, descargándotela de Google Play. También encontrarás en tu tienda Apple Store la <a href="https://itunes.apple.com/us/app/ictiva-tu-gimnasio-online-de-ejercicios-en-casa/id1217405866?mt=8" target="_blank" class="text-primary">app de ictiva para practicar yoga</a> y otras disciplinas allí donde quieras. Podrás hacer un seguimiento de tu actividad, con acceso completo a todas las salas, planes de entrenamiento y nutrición.</p>
