--- a/hiit-en-casa.html
+++ b/hiit-en-casa.html
@@ -55,25 +55,25 @@
     <meta property="og:site_name" content="ictiva, tu gimnasio online" />
     <meta property="og:image" content="https://www.ictiva.com/img/logo_ictiva.svg" />
 
-    <link rel=”canonical” href=”https://www.ictiva.comhomes/hiit-en-casa.html” />
+    <link rel=”canonical” href=”https://www.ictiva.com/homes/hiit-en-casa.html” />
 
     <!--Icon, favicon & webapp -->
-    <link rel="shortcut icon" href="homes/img/favicon.ico" type="image/vnd.microsoft.icon" />
-    <link rel="icon" href="homes/img/favicon.ico" type="image/vnd.microsoft.icon" />
-    <link rel="icon" href="homes/img/favicon.ico" type="image/x-icon"/>
-    <link rel="icon" href="homes/img/favicon.ico" type="image/ico"/>
+    <link rel="shortcut icon" href="/homes/img/favicon.ico" type="image/vnd.microsoft.icon" />
+    <link rel="icon" href="/homes/img/favicon.ico" type="image/vnd.microsoft.icon" />
+    <link rel="icon" href="/homes/img/favicon.ico" type="image/x-icon"/>
+    <link rel="icon" href="/homes/img/favicon.ico" type="image/ico"/>
 
     <!-- Bootstrap core CSS -->
-    <link href="homes/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/homes/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
-    <link href="homes/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="/homes/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800|Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 
     <!-- Plugin CSS -->
-    <link href="homes/css/magnific-popup.min.css" rel="stylesheet">
+    <link href="/homes/css/magnific-popup.min.css" rel="stylesheet">
 
-    <link href="homes/css/custom.min.css" rel="stylesheet">
+    <link href="/homes/css/custom.min.css" rel="stylesheet">
 
     <!--[if lt IE 9]><script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
@@ -126,7 +126,7 @@
 
                 <!-- Button trigger modal -->
                 <!-- <button type="button" class="btn btn-cta play-btn-wrap" data-toggle="modal" data-target="#exampleModalLong">
-                  <img src="homes/img/iconos/play_icon.png" alt="play video" class="img-fluid play-btn">
+                  <img src="/homes/img/iconos/play_icon.png" alt="play video" class="img-fluid play-btn">
                   <p class="my-2 text-white text-uppercase btn-text"><small>Mira el video</small></p>
                 </button>
                 
@@ -157,8 +157,8 @@
             </div>
         </div>
         <video autoplay loop muted class="w-100 hidden-lg-down">
-            <source src="homes/video/fondo_video_ictiva_1080.webm" type="video/webm">
-            <source src="homes/video/fondo_video_ictiva_1080.mp4" type="video/mp4">
+            <source src="/homes/video/fondo_video_ictiva_1080.webm" type="video/webm">
+            <source src="/homes/video/fondo_video_ictiva_1080.mp4" type="video/mp4">
             Your browser does not support HTML5 video.
         </video>
     </header>
@@ -167,7 +167,7 @@
             <div class="row no-padding">
                 <div class="col-md-6 no-padding text-center block">                    
                     <figure class="cl-box">
-                        <img class="img-fluid" src="homes/img/fotos/perdida-de-peso.jpg" height="auto" width="100%" alt="">                            
+                        <img class="img-fluid" src="/homes/img/fotos/perdida-de-peso.jpg" height="auto" width="100%" alt="">                            
                         <figcaption class="cl-content">
                             <h2 class="mx-0 mx-sm-4 text-white display-4 text-uppercase text-shadow">Entrenamiento HIIT por niveles</h2>
                             <div class="hidden-sm-down text-white">
@@ -185,7 +185,7 @@
                 </div>
                 <div class="col-md-6 no-padding text-center block">                    
                     <figure class="cl-box">
-                        <img class="img-fluid" src="homes/img/fotos/tonificar.jpg" height="auto" width="100%" alt="">                            
+                        <img class="img-fluid" src="/homes/img/fotos/tonificar.jpg" height="auto" width="100%" alt="">                            
                         <figcaption class="cl-content">
                             <h2 class="mx-0 mx-sm-4 text-white display-4 text-uppercase text-shadow">Rutina HIIT para Hombres y Mujeres</h2>
                             <h4 class="mx-0 mx-sm-4 text-white text-uppercase hidden-sm-down">Sea cual sea tu objetivo, tenemos sesiones para ti:</h4>
@@ -221,8 +221,8 @@
               <h3 class="display-4 py-4 text-uppercase text-shadow">HIIT cardio para ponerte en forma</h3>
               <p class="lead py-4 text-bigger">Crea tu objetivo, compártelo, reta a tus amigos y haz de ti tu mejor versión.</p>
               <p>Descárgate la aplicación aquí:</p>
-              <a href="https://play.google.com/store/apps/details?id=ictiva.carbonbyte.com.ictiva&?utm_source=hiit-en-casa&utm_medium=adwords-landing&utm_campaign=hiit" target="_blank"><img src="homes/img/logos-footer/google-play-badge.png" class="img-fluid img-logo" alt="android app" width="194" height="75"></a>
-              <a href="https://itunes.apple.com/us/app/ictiva-tu-gimnasio-online-de-ejercicios-en-casa/id1217405866?mt=8&utm_source=home&utm_medium=itunes&?utm_source=hiit-en-casa&utm_medium=adwords-landing&utm_campaign=hiit" target="_blank"><img src="homes/img/logos-footer/apple-store.png" class="img-fluid img-logo" alt="apple app" width="194" height="75"></a>
+              <a href="https://play.google.com/store/apps/details?id=ictiva.carbonbyte.com.ictiva&?utm_source=hiit-en-casa&utm_medium=adwords-landing&utm_campaign=hiit" target="_blank"><img src="/homes/img/logos-footer/google-play-badge.png" class="img-fluid img-logo" alt="android app" width="194" height="75"></a>
+              <a href="https://itunes.apple.com/us/app/ictiva-tu-gimnasio-online-de-ejercicios-en-casa/id1217405866?mt=8&utm_source=home&utm_medium=itunes&?utm_source=hiit-en-casa&utm_medium=adwords-landing&utm_campaign=hiit" target="_blank"><img src="/homes/img/logos-footer/apple-store.png" class="img-fluid img-logo" alt="apple app" width="194" height="75"></a>
             </div>
         </div>
     </div>
@@ -230,8 +230,8 @@
     <div class="container-fluid">
         <div class="row text-center py-4">
             <div class="col">
-                <img src="homes/img/logos-footer/CERTIFICADO_ENISA-web70.jpg" class="img-fluid sr-icons enisa-icon" width="auto" alt="certificado enisa">
-                <img src="homes/img/logos-footer/confianza-online.svg" class="img-fluid sr-icons ml-4" width="70" alt="certificado confianza online">
+                <img src="/homes/img/logos-footer/CERTIFICADO_ENISA-web70.jpg" class="img-fluid sr-icons enisa-icon" width="auto" alt="certificado enisa">
+                <img src="/homes/img/logos-footer/confianza-online.svg" class="img-fluid sr-icons ml-4" width="70" alt="certificado confianza online">
             </div>
         </div>
     </div>
@@ -253,19 +253,19 @@
     </div>
 
     <!-- Bootstrap core JavaScript -->
-    <script src="homes/vendor/jquery/jquery.min.js"></script>
-    <script src="homes/vendor/tether/tether.min.js"></script>
-    <script src="homes/vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/homes/vendor/jquery/jquery.min.js"></script>
+    <script src="/homes/vendor/tether/tether.min.js"></script>
+    <script src="/homes/vendor/bootstrap/js/bootstrap.min.js"></script>
 
     <!-- Plugin JavaScript -->
-    <script src="homes/vendor/jquery-easing/jquery.easing.min.js"></script>
-    <script src="homes/vendor/scrollreveal/scrollreveal.min.js"></script>
-    <script src="homes/vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
+    <script src="/homes/vendor/jquery-easing/jquery.easing.min.js"></script>
+    <script src="/homes/vendor/scrollreveal/scrollreveal.min.js"></script>
+    <script src="/homes/vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="homes/js/creative.min.js"></script>
+    <script src="/homes/js/creative.min.js"></script>
 
-    <script src="homes/js/tutorial.min.js"></script>
+    <script src="/homes/js/tutorial.min.js"></script>
 
     <script> 
       $('.navbar-nav>li>a').on('click', function(){
